--- a/mybuild/objects/templates/objects/detail.html
+++ b/mybuild/objects/templates/objects/detail.html
@@ -366,7 +366,8 @@
         <!-- Mobile Cards -->
         <div class="lg:hidden divide-y divide-gray-200">
           {% for r in remarks %}
-            <div class="p-4 hover:bg-gray-50 cursor-pointer" onclick="window.location.href='{% url &quot;issues:remark_detail&quot; r.id %}'">
+            {% with remark_url %}{% url 'issues:remark_detail' r.id %}{% endwith %}
+            <div class="p-4 hover:bg-gray-50 cursor-pointer" onclick="window.location.href='{{ remark_url }}'">
               <div class="flex items-start justify-between">
                 <div class="flex-1">
                   <h4 class="text-sm font-medium text-gray-900">{{ r.category.title }}</h4>
